--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@font-face {
+  font-family: 'KongYin';
+  src: url('./assets/fonts/KongYin.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'TengXiang';
+  src: url('./assets/fonts/TengXiang.ttf') format('truetype');
+}
 
